[package]
name = "htmx-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
maud = { version = "*", features = ["actix-web"] }
actix-files = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
derive_more = "0.99.17"